--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-close" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-save">Save changes</button>
+          <button type="button" class="btn btn-save">Save the changes</button>
         </div>
       </div>
     </div>
